Fixed unreadable text in dark mode

--- a/frontend/src/routes/Applications/css/DeleteResourceModal.css
+++ b/frontend/src/routes/Applications/css/DeleteResourceModal.css
@@ -70,7 +70,7 @@
 }
 .shared-resource-content {
     display: inline-flex;
-    color: #152935;
+    color: #352e15;
     line-height: 21px;
     margin-top: 1.5rem;
 }
@@ -90,7 +90,6 @@
 }
 .sub-child-resource-content {
     display: flex;
-    color: #152935;
     line-height: 21px;
 }
 .sub-child-resource-content svg {
